made it not working

--- a/train.ipynb
+++ b/train.ipynb
@@ -15,10 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import tensorflow as tf\n",
     "\n",
     "import sys\n",
@@ -28,6 +29,17 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_dir = '/home/ubuntu/data/tiny-imagenet-200/'"
    ]
   },
   {
@@ -46,21 +58,9 @@
    "outputs": [],
    "source": [
     "graph, ops = get_shufflenet(\n",
-    "    tf.train.AdamOptimizer(1e-4), groups=3,\n",
-    "    weight_decay=1e-5, \n",
-    "    image_size=224, num_classes=200\n",
+    "    initial_learning_rate=1e-2, groups=2, weight_decay=1e-4,\n",
+    "    image_size=64, num_classes=200\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "data_dir = '/home/ubuntu/data/tiny-imagenet/'"
    ]
   },
   {
@@ -72,15 +72,17 @@
     "losses, is_early_stopped = train(\n",
     "    0, graph, ops, \n",
     "    data_dir + 'train.tfrecords', data_dir + 'val.tfrecords',\n",
-    "    batch_size=64, num_epochs=5, steps_per_epoch=400, validation_steps=80, \n",
-    "    patience=10\n",
+    "    batch_size=128, num_epochs=10, steps_per_epoch=781, validation_steps=78, \n",
+    "    lr_patience=4, lr_threshold=0.01, patience=10, threshold=0.01,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot([x[1] for x in losses], label='train');\n",
@@ -93,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot([x[3] for x in losses], label='train');\n",
