--- a/train.ipynb
+++ b/train.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -15,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -53,12 +49,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "graph, ops = get_shufflenet(\n",
-    "    initial_learning_rate=1e-2, groups=2, weight_decay=1e-4,\n",
+    "    initial_learning_rate=1e-1, groups=3, weight_decay=1e-2,\n",
     "    image_size=64, num_classes=200\n",
     ")"
    ]
@@ -66,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "losses, is_early_stopped = train(\n",
