--- a/train.ipynb
+++ b/train.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -55,7 +59,7 @@
    "outputs": [],
    "source": [
     "graph, ops = get_shufflenet(\n",
-    "    initial_learning_rate=1e-1, groups=3, weight_decay=1e-2,\n",
+    "    initial_learning_rate=1e-3, groups=3, weight_decay=1e-3,\n",
     "    image_size=64, num_classes=200\n",
     ")"
    ]
@@ -64,6 +68,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -71,8 +76,8 @@
     "losses, is_early_stopped = train(\n",
     "    0, graph, ops, \n",
     "    data_dir + 'train.tfrecords', data_dir + 'val.tfrecords',\n",
-    "    batch_size=128, num_epochs=10, steps_per_epoch=781, validation_steps=78, \n",
-    "    lr_patience=4, lr_threshold=0.01, patience=10, threshold=0.01,\n",
+    "    batch_size=200, num_epochs=200, steps_per_epoch=500, validation_steps=50, \n",
+    "    lr_patience=4, lr_threshold=0.01, patience=10, threshold=0.01\n",
     ")"
    ]
   },
