--- a/how_channel_shuffle_works.ipynb
+++ b/how_channel_shuffle_works.ipynb
@@ -8,15 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Numpy"
+    "import numpy as np"
    ]
   },
   {
@@ -27,9 +19,13 @@
    },
    "outputs": [],
    "source": [
-    "# channels:\n",
-    "x = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
-    "groups = 4"
+    "# the main algorithm\n",
+    "def channel_shuffle(x, groups):\n",
+    "    channels_per_group = int(len(x)/groups)\n",
+    "    x = x.reshape(groups, channels_per_group)\n",
+    "    x = x.T\n",
+    "    x = x.reshape(groups*channels_per_group)\n",
+    "    return x"
    ]
   },
   {
@@ -40,21 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "def channel_shuffle(x, groups):\n",
-    "    channels_per_group = int(len(x)/groups)\n",
-    "    # main algorithm:\n",
-    "    x = x.reshape(groups, channels_per_group)\n",
-    "    x = x.T\n",
-    "    x = x.reshape(groups*channels_per_group)\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# for visualization\n",
     "def print_grouped(x, groups):\n",
     "    channels_per_group = int(len(x)/groups)\n",
     "    s = []\n",
@@ -68,23 +50,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'| 0 1 2 | 3 4 5 | 6 7 8 | 9 10 11 |'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# before\n",
-    "print_grouped(x, groups)"
+    "# this represents channels\n",
+    "x = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## groups = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groups = 4"
    ]
   },
   {
@@ -95,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "'| 0 3 6 | 9 1 4 | 7 10 2 | 5 8 11 |'"
+       "'| 0 1 2 | 3 4 5 | 6 7 8 | 9 10 11 |'"
       ]
      },
      "execution_count": 6,
@@ -104,41 +95,47 @@
     }
    ],
    "source": [
-    "# and after channel shuffle\n",
-    "print_grouped(channel_shuffle(x, groups), groups)"
+    "# before channel shuffle\n",
+    "print_grouped(x, groups)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# change number of groups\n",
-    "groups = 3\n",
-    "# and try again:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'| 0 1 2 3 | 4 5 6 7 | 8 9 10 11 |'"
+       "'| 0 3 6 | 9 1 4 | 7 10 2 | 5 8 11 |'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print_grouped(x, groups)"
+    "# after channel shuffle\n",
+    "print_grouped(channel_shuffle(x, groups), groups)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## groups = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groups = 3"
    ]
   },
   {
@@ -149,7 +146,7 @@
     {
      "data": {
       "text/plain": [
-       "'| 0 4 8 1 | 5 9 2 6 | 10 3 7 11 |'"
+       "'| 0 1 2 3 | 4 5 6 7 | 8 9 10 11 |'"
       ]
      },
      "execution_count": 9,
@@ -158,140 +155,27 @@
     }
    ],
    "source": [
-    "print_grouped(channel_shuffle(x, groups), groups)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tensorflow"
+    "print_grouped(x, groups)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def tf_channel_shuffle(X, groups):\n",
-    "    height, width, in_channels = X.shape.as_list()[1:]\n",
-    "    in_channels_per_group = int(in_channels/groups)\n",
-    "\n",
-    "    shape = tf.stack([-1, height, width, groups, in_channels_per_group])\n",
-    "    X = tf.reshape(X, shape)\n",
-    "    \n",
-    "    X = tf.transpose(X, [0, 1, 2, 4, 3])\n",
-    "    \n",
-    "    shape = tf.stack([-1, height, width, in_channels])\n",
-    "    X = tf.reshape(X, shape)\n",
-    "    return X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[[ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]]\n",
-      "\n",
-      "  [[ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]]\n",
-      "\n",
-      "  [[ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]\n",
-      "   [ 0.   1.   2.   3.   4.   5.   6.   7.   8. ]]]\n",
-      "\n",
-      "\n",
-      " [[[ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]]\n",
-      "\n",
-      "  [[ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]]\n",
-      "\n",
-      "  [[ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]\n",
-      "   [ 0.5  1.5  2.5  3.5  4.5  5.5  6.5  7.5  8.5]]]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'| 0 4 8 1 | 5 9 2 6 | 10 3 7 11 |'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# two images with height=3, width=4, channels=9\n",
-    "batch = np.stack([\n",
-    "    np.stack([i*np.ones((3, 4)) for i in range(0, 9)], axis=-1),\n",
-    "    np.stack([(i + 0.5)*np.ones((3, 4)) for i in range(0, 9)], axis=-1)\n",
-    "])\n",
-    "print(batch)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[[ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]]\n",
-      "\n",
-      "  [[ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]]\n",
-      "\n",
-      "  [[ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]\n",
-      "   [ 0.   3.   6.   1.   4.   7.   2.   5.   8. ]]]\n",
-      "\n",
-      "\n",
-      " [[[ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]]\n",
-      "\n",
-      "  [[ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]]\n",
-      "\n",
-      "  [[ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]\n",
-      "   [ 0.5  3.5  6.5  1.5  4.5  7.5  2.5  5.5  8.5]]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "tf.reset_default_graph()\n",
-    "\n",
-    "P = tf.placeholder(tf.float32, shape=[None, 3, 4, 9])\n",
-    "X = tf_channel_shuffle(P, groups=3)\n",
-    "\n",
-    "with tf.Session() as sess:\n",
-    "    x = sess.run(X, feed_dict={P: batch})\n",
-    "    print(x)"
+    "print_grouped(channel_shuffle(x, groups), groups)"
    ]
   }
  ],
